compiling_error.txt
/home/david/Desktop/422/project4/fsck.c: In function ‘main’:
/home/david/Desktop/422/project4/fsck.c:68:3: error: unknown type name ‘superblock’
   superblock *sb = GET_SUPER_BLOCK(file_ptr);
   ^
/home/david/Desktop/422/project4/fsck.c:24:35: warning: initialization from incompatible pointer type [-Wincompatible-pointer-types]
 #define GET_SUPER_BLOCK(file_ptr) (struct superblock*)((char*)file_ptr + BSIZE)
                                   ^
/home/david/Desktop/422/project4/fsck.c:68:20: note: in expansion of macro ‘GET_SUPER_BLOCK’
   superblock *sb = GET_SUPER_BLOCK(file_ptr);
                    ^
/home/david/Desktop/422/project4/fsck.c:76:25: error: request for member ‘size’ in something not a structure or union
     "bmapstart %d\n", sb->size, sb->nblocks, sb->ninodes, sb->nlog, sb->logstart, sb->inodestart, sb->bmapstart);
                         ^
/home/david/Desktop/422/project4/fsck.c:76:35: error: request for member ‘nblocks’ in something not a structure or union
     "bmapstart %d\n", sb->size, sb->nblocks, sb->ninodes, sb->nlog, sb->logstart, sb->inodestart, sb->bmapstart);
                                   ^
/home/david/Desktop/422/project4/fsck.c:76:48: error: request for member ‘ninodes’ in something not a structure or union
     "bmapstart %d\n", sb->size, sb->nblocks, sb->ninodes, sb->nlog, sb->logstart, sb->inodestart, sb->bmapstart);
                                                ^
/home/david/Desktop/422/project4/fsck.c:76:61: error: request for member ‘nlog’ in something not a structure or union
     "bmapstart %d\n", sb->size, sb->nblocks, sb->ninodes, sb->nlog, sb->logstart, sb->inodestart, sb->bmapstart);
                                                             ^
/home/david/Desktop/422/project4/fsck.c:76:71: error: request for member ‘logstart’ in something not a structure or union
     "bmapstart %d\n", sb->size, sb->nblocks, sb->ninodes, sb->nlog, sb->logstart, sb->inodestart, sb->bmapstart);
                                                                       ^
/home/david/Desktop/422/project4/fsck.c:76:85: error: request for member ‘inodestart’ in something not a structure or union
     "bmapstart %d\n", sb->size, sb->nblocks, sb->ninodes, sb->nlog, sb->logstart, sb->inodestart, sb->bmapstart);
                                                                                     ^
/home/david/Desktop/422/project4/fsck.c:76:101: error: request for member ‘bmapstart’ in something not a structure or union
     "bmapstart %d\n", sb->size, sb->nblocks, sb->ninodes, sb->nlog, sb->logstart, sb->inodestart, sb->bmapstart);
                                                                                                     ^
/home/david/Desktop/422/project4/fsck.c:79:11: error: request for member ‘size’ in something not a structure or union
     if (sb->size*BSIZE != (uint)file_size) {
           ^
/home/david/Desktop/422/project4/fsck.c:84:11: error: request for member ‘ninodes’ in something not a structure or union
     if (sb->ninodes > sb->size) {
           ^
/home/david/Desktop/422/project4/fsck.c:84:25: error: request for member ‘size’ in something not a structure or union
     if (sb->ninodes > sb->size) {
                         ^
/home/david/Desktop/422/project4/fsck.c:89:11: error: request for member ‘nblocks’ in something not a structure or union
     if (sb->nblocks > sb->size) {
           ^
/home/david/Desktop/422/project4/fsck.c:89:25: error: request for member ‘size’ in something not a structure or union
     if (sb->nblocks > sb->size) {
                         ^
/home/david/Desktop/422/project4/fsck.c:97:36: error: request for member ‘ninodes’ in something not a structure or union
     inode_refs = (short *)calloc(sb->ninodes, sizeof(short));
                                    ^
/home/david/Desktop/422/project4/fsck.c:98:38: error: request for member ‘size’ in something not a structure or union
     in_use_blocks = (short*)calloc(sb->size, sizeof(short));
                                      ^
/home/david/Desktop/422/project4/fsck.c:101:22: error: request for member ‘ninodes’ in something not a structure or union
     for(i = 1; i < sb->ninodes; i++) {
                      ^
/home/david/Desktop/422/project4/fsck.c:102:7: error: unknown type name ‘dinode’
       dinode* inode = GET_INODE(i, sb, file_ptr);
       ^
/home/david/Desktop/422/project4/fsck.c:25:74: error: request for member ‘inodestart’ in something not a structure or union
 #define GET_INODE(i, sb, file_ptr) (struct dinode*)((char*)file_ptr + (sb->inodestart+i)*BSIZE)
                                                                          ^
/home/david/Desktop/422/project4/fsck.c:102:23: note: in expansion of macro ‘GET_INODE’
       dinode* inode = GET_INODE(i, sb, file_ptr);
                       ^
/home/david/Desktop/422/project4/fsck.c:103:16: error: request for member ‘type’ in something not a structure or union
       if (inode->type == 0) {
                ^
/home/david/Desktop/422/project4/fsck.c:106:16: error: request for member ‘type’ in something not a structure or union
       if (inode->type == T_FILE || inode->type == T_DIR || inode->type == T_DEV) {
                ^
/home/david/Desktop/422/project4/fsck.c:106:41: error: request for member ‘type’ in something not a structure or union
       if (inode->type == T_FILE || inode->type == T_DIR || inode->type == T_DEV) {
                                         ^
/home/david/Desktop/422/project4/fsck.c:106:65: error: request for member ‘type’ in something not a structure or union
       if (inode->type == T_FILE || inode->type == T_DIR || inode->type == T_DEV) {
                                                                 ^
/home/david/Desktop/422/project4/fsck.c:25:74: error: request for member ‘inodestart’ in something not a structure or union
 #define GET_INODE(i, sb, file_ptr) (struct dinode*)((char*)file_ptr + (sb->inodestart+i)*BSIZE)
                                                                          ^
/home/david/Desktop/422/project4/fsck.c:116:32: note: in expansion of macro ‘GET_INODE’
     struct dinode *root_node = GET_INODE(1, sb, file_ptr);
                                ^
/home/david/Desktop/422/project4/fsck.c:124:22: error: request for member ‘ninodes’ in something not a structure or union
     for(i = 2; i < sb->ninodes; i++) {
                      ^
/home/david/Desktop/422/project4/fsck.c:125:7: error: unknown type name ‘dinode’
       dinode *inode = GET_INODE(i, sb, file_ptr);
       ^
/home/david/Desktop/422/project4/fsck.c:25:74: error: request for member ‘inodestart’ in something not a structure or union
 #define GET_INODE(i, sb, file_ptr) (struct dinode*)((char*)file_ptr + (sb->inodestart+i)*BSIZE)
                                                                          ^
/home/david/Desktop/422/project4/fsck.c:125:23: note: in expansion of macro ‘GET_INODE’
       dinode *inode = GET_INODE(i, sb, file_ptr);
                       ^
/home/david/Desktop/422/project4/fsck.c:126:39: error: request for member ‘nlink’ in something not a structure or union
       short expected_ref_count = inode->nlink;
                                       ^
/home/david/Desktop/422/project4/fsck.c:138:16: error: request for member ‘type’ in something not a structure or union
       if (inode->type == T_DIR) {
                ^
/home/david/Desktop/422/project4/fsck.c:143:22: error: request for member ‘type’ in something not a structure or union
       }else if (inode->type == T_FILE){
                      ^
/home/david/Desktop/422/project4/fsck.c:152:33: error: request for member ‘size’ in something not a structure or union
     int starting_data_block = sb->size - sb->nblocks;
                                 ^
/home/david/Desktop/422/project4/fsck.c:152:44: error: request for member ‘nblocks’ in something not a structure or union
     int starting_data_block = sb->size - sb->nblocks;
                                            ^
/home/david/Desktop/422/project4/fsck.c:153:40: error: request for member ‘size’ in something not a structure or union
     for(i = starting_data_block; i < sb->size; i++) {
                                        ^
/home/david/Desktop/422/project4/fsck.c:27:66: error: request for member ‘bmapstart’ in something not a structure or union
 #define IS_BLOCK_ALLOC(i, sb, file_ptr) ((*((char*)file_ptr + (sb->bmapstart)*BSIZE+(i/8))) & (1 << (i%8)))
                                                                  ^
/home/david/Desktop/422/project4/fsck.c:154:31: note: in expansion of macro ‘IS_BLOCK_ALLOC’
       if (in_use_blocks[i] != IS_BLOCK_ALLOC(i, sb, file_ptr)) {
                               ^
/home/david/Desktop/422/project4/fsck.c: In function ‘checkDir’:
/home/david/Desktop/422/project4/fsck.c:228:88: warning: comparison of distinct pointer types lacks a cast
     for(tmp_dirent = (struct dirent*)block; tmp_dirent->inum != 0 && (void*)tmp_dirent < (char*)block + BSIZE; tmp_dirent++) {
                                                                                        ^
